--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -18,6 +18,11 @@ android {
     }
 }
 
+dependencies {
+    implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
+    implementation 'org.tensorflow:tensorflow-android:+'
+}
+
 repositories {
     flatDir {
         dirs '../libs'
