--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -13,3 +13,13 @@
 
 // Include common definitions from above.
 apply from: '../build.common.gradle'
+
+android{
+    aaptOptions{
+        noCompress "tflite"
+    }
+}
+dependencies {
+    implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
+    implementation 'org.tensorflow:tensorflow-android:+'
+}
