--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -19,8 +19,8 @@ android {
 }
 
 dependencies {
-    implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
-    implementation 'org.tensorflow:tensorflow-android:+'
+// implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
+//    implementation 'org.tensorflow:tensorflow-android:+'
 }
 
 repositories {
@@ -28,5 +28,6 @@ repositories {
         dirs '../libs'
     }
 }
+
 
 apply from: 'build.release.gradle'
