--- a/FtcRobotController/build.release.gradle
+++ b/FtcRobotController/build.release.gradle
@@ -8,4 +8,6 @@ dependencies {
     implementation (name:'FtcCommon-release', ext: 'aar')
     implementation (name:'WirelessP2p-release', ext:'aar')
     implementation 'com.android.support:support-compat:28.0.0'
+    //implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
+    implementation (name: 'tensorflow-lite-0.0.0-nightly', ext:'aar')
 }
