--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -20,6 +20,5 @@ android{
     }
 }
 dependencies {
-//   implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
-//    implementation 'org.tensorflow:tensorflow-android:+'
+    implementation 'org.jcodec:jcodec:0.2.3'
 }
