--- a/FtcRobotController/src/main/AndroidManifest.xml
+++ b/FtcRobotController/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
           android:versionName="5.3">
 
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
+  <uses-feature android:name="android.hardware.camera"
+      android:required="true" />
   <application
     android:allowBackup="true"
     android:largeHeap="true"
