--- a/FtcRobotController/build.release.gradle
+++ b/FtcRobotController/build.release.gradle
@@ -9,5 +9,8 @@ dependencies {
     implementation (name:'WirelessP2p-release', ext:'aar')
     implementation 'com.android.support:support-compat:28.0.0'
     //implementation 'org.tensorflow:tensorflow-lite:0.0.0-nightly'
-    implementation (name: 'tensorflow-lite-0.0.0-nightly', ext:'aar')
+    //implementation (name: 'tensorflow-lite-0.0.0-nightly', ext:'aar')
+    //implementation 'org.tensorflow:tensorflow-lite:2.3.0'
+    //implementation (name:'org.tensorflow:tensorflow-lite:2.3.0',ext:'arr')
+    //implementation (name:'org.tensorflow:tensorflow-lite:2.3.0',ext:'arr')
 }
