--- a/TeamCode/build.release.gradle
+++ b/TeamCode/build.release.gradle
@@ -5,5 +5,7 @@ dependencies {
     implementation (name: 'FtcCommon-release', ext: 'aar')
     implementation (name: 'WirelessP2p-release', ext:'aar')
     implementation (name: 'tfod-release', ext:'aar')
-    implementation (name: 'tensorflow-lite-0.0.0-nightly', ext:'aar')
+//    implementation (name: 'tensorflow-lite-0.0.0-nightly', ext:'aar')
+//    implementation (name:'org.tensorflow:tensorflow-lite:2.3.0',ext:'arr')
+    implementation 'org.tensorflow:tensorflow-lite:2.3.0'
 }
