--- a/TeamCode/build.release.gradle
+++ b/TeamCode/build.release.gradle
@@ -8,4 +8,5 @@ dependencies {
 //    implementation (name: 'tensorflow-lite-0.0.0-nightly', ext:'aar')
 //    implementation (name:'org.tensorflow:tensorflow-lite:2.3.0',ext:'arr')
     implementation 'org.tensorflow:tensorflow-lite:2.3.0'
+    implementation 'org.tensorflow:tensorflow-lite-support:0.0.0-nightly'
 }
